[package]
name = "walriust"
version = "0.1.0"
authors = ["pistachiology <im@itua.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
diesel = { version = "1.0.0", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.9.0"
futures = "0.3.0"
futures-util = "0.3.1"
telegram-bot = { git = 'https://github.com/telegram-rs/telegram-bot' }
tokio = { version = "0.2", features = ["full"] }

